[package]
name = "forge_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
process = { path = "../process"}
eframe = "0.25.0"
egui_extras = "0.25.0"
clap = {version = "4", features = ["derive"]}